5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1716_2507.log
== TEST (2019-05-16 15:51:38) 
-- CODE:
p = int(input("Peixes: "))

c = int(input("Fracao: "))
# m é MESES
m = 0

while (p > 0 and p < 8000):
	v = int(input("Vendas: "))
	p = p + (p*c/100)-v
	m = m + 1
	

if (p <= 0):
	msg = "ZERO"
else:
	msg = "MAXIMO"
print(msg)
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(meses)
NameError: name 'meses' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:51:52) 
-- CODE:
p = int(input("Peixes: "))

c = int(input("Fracao: "))
# m é MESES
m = 0

while (p > 0 and p < 8000):
	v = int(input("Vendas: "))
	p = p + (p*c/100)-v
	m = m + 1
	

if (p <= 0):
	msg = "ZERO"
else:
	msg = "MAXIMO"
print(msg)
print(meses)
-- EXECUTION TIME:
0.211461
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 18, in <module>
    print(meses)
NameError: name 'meses' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:52:22) 
-- CODE:
p = int(input("Peixes: "))

c = int(input("Fracao: "))
# m é MESES
meses = 0

while (p > 0 and p < 8000):
	v = int(input("Vendas: "))
	p = p + (p*c/100)-v
	meses = meses + 1
	

if (p <= 0):
	msg = "ZERO"
else:
	msg = "MAXIMO"
print(msg)
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:52:36) 
-- CODE:
p = int(input("Peixes: "))

c = int(input("Fracao: "))
# m é MESES
meses = 0

while (p > 0 and p < 8000):
	v = int(input("Vendas: "))
	p = p + (p*c/100)-v
	meses = meses + 1
	

if (p <= 0):
	msg = "ZERO"
else:
	msg = "MAXIMO"
print(msg)
print(meses)
-- EXECUTION TIME:
0.172028
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
